# openakun

./: .dir-locals.el  .gitignore  AGENTS.md  Dockerfile.app  LICENSE  README.rst  alembic.ini  docker_compose.dev.yml  docker_run_with_worker.sh  future.org  justfile  make_digest.sh  openakun.cfg.default  openakun_config.toml.default  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 01dc05d8c691_initial_setup.py  0cc51c780f15_updates_from_sqlalchemy_upgrade.py  116e5a66d9ed_removed_token_silliness_on_chat_messages.py  1c465843735b_forced_unique_id_tokens.py  40f60062ddd5_added_timezones.py  4524ddfe9432_added_topics.py  5a2000313032_unique_user_names.py  5d09b4ee385d_added_vote_stuff.py  5ffccde67075_add_tags_table.py  695bd1759bbb_rectified_votes.py  7210849b51fe_added_vote_tables.py  72bfa8cd989c_added_chat_channel_index.py  74b597cd6ec9_token_field_for_chat_message.py  94b5cb01d6a5_added_chat_tables.py  cdf4a9e99fd8_added_user_or_anon_constraint.py  ceddbf7c791c_start_schema_from_zero.py  d3930fd73fb2_chat_message_thread_id.py  edda1a2c4ff7_added_ip_identifier_table.py
openakun/: .flake8  app.py  config.py  data.py  general.py  login.py  models.py  pages.py  realtime.py  redisvotes.lua  tasks.py  testshell.py  websocket.py  worker.py
openakun/static/: chapter.css  chapter.js  dark-mode.css  light-mode.css  main.js  style.css  tailwind-inp.css  tailwind.css  util.js  votes-dark.css  votes-light.css  votes.css  votes.js
openakun/templates/: base.html  chat_backlog.html  login.html  macros.html  main.html  post_story.html  render_chatmsg.html  render_post.html  render_vote.html  signup.html  story_view.html  topic_list.html  user_profile.html  view_chapter.html  view_story.html  view_topic.html
tests/: conftest.py  context.py  test_login.py
