[tool.poetry]
name = "openakun"
version = "0.0.1"
description = "Open real-time questing engine"
authors = ["alethiophile <mail@alethiophile.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
passlib = "^1.7.2"
fastpbkdf2 = "^0.2"
alembic = "^1.4.3"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
bleach = "^3.2.1"
redis = "^5.0.1"
click = "^8.1.3"
attrs = "^20.2.0"
celery = {extras = ["redis"], version = "^5.2.0"}
sentry-sdk = {extras = ["flask"], version = "^1.34.0"}
flask = "^2.3.2"
flask-login = "^0.6.2"
gevent = "^23.7.0"
gevent-websocket = "^0.10.1"
flask-sock = "^0.7.0"
flask-htmx = "^0.3.2"
jinja2-fragments = "^1.3.0"

[tool.poetry.scripts]
openakun_initdb = 'openakun.app:init_db'
openakun_server = 'openakun.app:do_run'

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.1.0"
sqlalchemy-stubs = "^0.4"
types-redis = "^4.6.0.10"
types-bleach = "^6.1.0.0"
types-passlib = "^1.7.7.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
