[tool.poetry]
name = "openakun"
version = "0.0.1"
description = "Open real-time questing engine"
authors = ["alethiophile <mail@alethiophile.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastpbkdf2 = "^0.2"
alembic = "^1.14.1"
sqlalchemy = {version = "^2.0.38", extras = ["asyncio"]}
psycopg2 = "^2.9.10"
bleach = "^3.2.1"
redis = "^6.4.0"
click = "^8.1.3"
attrs = "^25.1.0"
celery = {extras = ["redis"], version = "^5.2.0"}
sentry-sdk = {extras = ["quart"], version = "^2.22.0"}
flask-login = "^0.6.3"
flask-htmx = "^0.3.2"
jinja2-fragments = "^1.7.0"
cattrs = "^24.1.2"
quart = "^0.20.0"
quart-flask-patch = "^0.3.0"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
libpass = "^1.9.0"

[tool.poetry.scripts]
openakun_initdb = 'openakun.app:init_db'
openakun_server = 'openakun.app:do_run'

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
flake8 = "^7.1.2"
types-bleach = "^6.1.0.0"
types-passlib = "^1.7.7.13"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
coverage = "^7.6.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
